# md2print

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  readme-screenshot.yml
docs/: ARCHITECTURE.md  PAGINATION.md  PRESETS.md  TESTING.md  TEST_STRATEGY.md
docs/agents/: domain.md
examples/: engineering_report.md  incident_postmortem.md  tabletop_character_sheet.md  technical_recovery_binder.md
examples/outputs/: engineering_report.html  tabletop_character_sheet_compact-3ring.html
scripts/: update-readme-screenshot.sh
src/md2print/: __init__.py  __main__.py  cli.py  convert.py  presets.py  styles.py  templates.py
tests/: test_cli.py  test_convert.py  test_presets.py
tests/fixtures/: output_quality.md
